--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   google_maps_flutter: ^2.1.8
   outline_material_icons: ^0.1.1
   geolocator: ^9.0.1
+  http: ^0.13.5
+  provider: ^6.0.4
   
 
 dev_dependencies:
